Change subscription styles

--- a/templates/subscriptions/snippets/payment_details.html
+++ b/templates/subscriptions/snippets/payment_details.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 
 {% if form %}
-  <h2>Payment details</h2>
+  <span class="h1">Payment details</span>
 
   {% include 'subscriptions/snippets/form_table.html' with form=form %}
 {% endif %}
