--- a/templates/subscriptions/snippets/subscription_plan_cost.html
+++ b/templates/subscriptions/snippets/subscription_plan_cost.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-<h2>Subscription Details</h2>
+<span class="h1">Subscription Details</span>
 
 <div class="form-errors">{{ form.non_field_errors }}</div>
 
