--- a/static/css/style.css
+++ b/static/css/style.css
@@ -75,12 +75,27 @@ body {
     }
 }
 
+
 /* Plan cards styles */
+
 #dfs-container
 {
     font: inherit;
     padding-top: 60px;
     background-color: #f5f5f5;
+}
+
+.subscribe-container {
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    text-align: left;
+}
+
+.subscribe-form {
+    margin: 100px auto;
 }
 
 #dfs-container .subscribe-container .plans
@@ -271,6 +286,8 @@ body {
 }
 
 .profile-image {
+    width: 320px;
+    height: 320px;
     margin: -10% 0 0 3%;
 }
 
@@ -294,10 +311,78 @@ body {
 }
 
 .btn-save-changes {
+    margin-top: 30px;
     width: 155px;
 }
 
-.btn-save-changes:after {
-    font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f058";
-    margin-left: 9%;
-}
+/*.btn-save-changes:after {*/
+/*    font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f058";*/
+/*    margin-left: 9%;*/
+/*}*/
+
+
+/* Subscribe preview */
+
+    #dfs-container .subscribe-container .subscribe-form {
+      padding: 1rem 0;
+    }
+
+    #dfs-container .subscribe-container .form-field {
+      margin: 0.5rem 0;
+      max-width: 600px;
+    }
+
+      #dfs-container .subscribe-container .form-field input,
+      #dfs-container .subscribe-container .form-field select {
+        display: block;
+        font-size: 1.5rem;
+      }
+
+      #dfs-container .subscribe-container .form-field input {display: block;
+        width: 100%;
+        height: calc(1.5em + .75rem + 2px);
+        padding: .375rem .75rem;
+        font-size: 1rem;
+        font-weight: 400;
+        line-height: 1.5;
+        color: #495057;
+        background-color: #fff;
+        background-clip: padding-box;
+        border: 1px solid #ced4da;
+        border-radius: .25rem;
+        transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+      }
+
+      #dfs-container .subscribe-container .form-field-label {
+        display: block;
+        font-size: 1rem;
+        font-weight: 700;
+        padding: 0.25rem 0;
+      }
+
+      #dfs-container .subscribe-container .form-field-help-text {
+        display: block;
+        font-size: 1rem;
+        font-style: italic;
+        padding: 0.5rem 0;
+      }
+
+    #dfs-container .subscribe-container #id_plan_cost {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+    }
+
+      #dfs-container .subscribe-container #id_plan_cost li {
+        margin: 0.5rem 0;
+      }
+
+      #dfs-container .subscribe-container #id_plan_cost label {
+        cursor: pointer;
+      }
+
+    #dfs-container .subscribe-container .form-buttons {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+    }
