--- a/templates/snippets/header.html
+++ b/templates/snippets/header.html
@@ -43,8 +43,8 @@
         {% if not user.is_authenticated %}
             <a class="btn btn-link header__button-login" href="/users/login">Log In</a>
             <a class="btn btn-primary header__button-signup" href={% url 'dfs_subscribe_list' %}><span>Get Started</span></a>
-            {% else %}
-                <a class="btn btn-link header__button-login" href="/users/profile">{{user.username}}</a>
+        {% else %}
+                <a class="btn btn-link header__button-login" href="/users/profile">{{request.user.username}}</a>
                 <a class="btn btn-link header__button-login" href="/users/logout">Logout</a>
         {% endif %}
     </div>
