--- a/templates/subscriptions/subscribe_list.html
+++ b/templates/subscriptions/subscribe_list.html
@@ -8,9 +8,9 @@
 {% block content %}
     <main class="subscribe-container">
         {% if user.is_authenticated %}
-            <h1 class="h1 display-4">Subscription Plans</h1>
+            <h1 class="display-4">Subscription Plans</h1>
         {% else %}
-            <h1 class="h1 display-4">Sign Up & Subscribe</h1>
+            <h1 class="display-4">Sign Up & Subscribe</h1>
         {% endif %}
 
         <div class="plans">
