--- a/templates/subscriptions/subscribe_thank_you.html
+++ b/templates/subscriptions/subscribe_thank_you.html
@@ -6,10 +6,12 @@
 
 {% block content %}
   <main class="subscribe-container">
-    <h1>Successfully subscribed!</h1>
+    <h1 class="display-4 mb-4">Successfully subscribed!</h1>
 
     <p>You have been successfully subscribed!</p>
 
     <p>You may save your transaction ID for your records: {{ transaction.id }}</p>
+
+    <p class="confirmed-link"><a href="{% url 'upload' %}">Go to your storage</a></p>
   </main>
 {% endblock %}
