--- a/templates/base.html
+++ b/templates/base.html
@@ -6,8 +6,10 @@
         <link rel="stylesheet" type="text/css" href="{% static '/css/style.css' %}">
         <link rel="stylesheet" type="text/css" href="{% static '/fontawesome-free-5.15.1-web/css/all.css' %}">
 
+{#        <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.css">#}
+{#        <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.22/css/dataTables.bootstrap4.min.css">#}
+
         <link rel="shortcut icon" href="{% static '/image/cloud.png' %}" type="image/x-icon">
-<link href="//db.onlinewebfonts.com/c/2206d6cc490084998d531e8c1b2cbb4a?family=Druk+Wide+Bold" rel="stylesheet" type="text/css"/>
         <title>{% block title %}CloudStorage{% endblock %}</title>
     </head>
     <body class="base-body">
