--- a/templates/storage/upload.html
+++ b/templates/storage/upload.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
+
 {% load static %}
+{% load crispy_forms_filters %}
+{% load humanize %}
 
 {#<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.css">#}
 {#<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.22/css/dataTables.bootstrap4.min.css">#}
@@ -17,7 +20,7 @@
     <script src="{% static 'js/jquery/jquery-file-upload/jquery.fileupload.js' %}"></script>
 
     <script src="{% static 'js/jquery/file-upload/drag-and-drop-upload.js' %}"></script>
-    <script src="{% static 'js/jquery/file-select-actions/file-select-actions.js' %}"></script>
+    <script src="{% static 'js/jquery/table-actions/table-actions.js' %}"></script>
 {% endblock %}
 
 {% block main %}
@@ -38,10 +41,12 @@
             </div>
         </div>
 
-        <div class="before-table-content">
+        <div class="before-table-content noselect">
             <h2 class="overview-text">Overview</h2>
-            <div class="storage-size-info"><span
-                    class="storage-size-info-text text-muted"><span class="used-size">{{ used_size }}</span> of {{ capacity }} GB used</span></div>
+            <div class="storage-size-info">
+                <span class="storage-size-info-text text-muted"><span class="used-size">{{ used_size }}</span> of {{ capacity }} GB used</span>
+                <i class="fa fa-chevron-down chevron-icon"></i>
+            </div>
             <div class="storage-buttons">
                 <div class="delete-selected" style="display: none">
                     <button class="btn btn-outline-danger btn-delete-selected" type="submit">Delete</button>
@@ -53,46 +58,59 @@
             </div>
         </div>
 
+        <div class="search-filter-content">
+            <form method="get" class="search-filter-form">
+            <div class="search-bar">
+                    <div class="search-bar-form">
+                        {{ filter.form.title|as_crispy_field }}
+                    </div>
+                    <button type="submit" class="btn btn-outline-primary search-button">Search</button>
+            </div>
+
+            <div class="filters-bar">
+                {{ filter.form.type|as_crispy_field }}
+            </div>
+            </form>
+        </div>
+
         <table id="files-list" class="table table-striped">
             <thead class="thead-light">
-            <tr>
-                <th scope="col" class="">
-                    <input class="select-all" type="checkbox" />
-                </th>
-                <th scope="col">Preview</th>
-                <th scope="col"><span class="table-sortable-column-name">Filename<i class="fa fa-sort sort-icon ml-2"></i></span></th>
-                <th scope="col"><span class="table-sortable-column-name">Uploaded at<i class="fa fa-sort sort-icon ml-2"></i></span></th>
-                <th scope="col"><span class="table-sortable-column-name">Type<i class="fa fa-sort sort-icon ml-2"></i></span></th>
-                <th scope="col"><span class="table-sortable-column-name">Size<i class="fa fa-sort sort-icon ml-2"></i></span></th>
-                <th scope="col">Actions</th>
-            </tr>
+                <tr>
+                    <th scope="col" class="">
+                        <input class="select-all" type="checkbox" />
+                    </th>
+                    <th scope="col">Preview</th>
+                    <th scope="col"><span class="table-sortable-column-name">Filename<i class="fa fa-sort sort-icon ml-2"></i></span></th>
+                    <th scope="col"><span class="table-sortable-column-name">Uploaded<i class="fa fa-sort sort-icon ml-2"></i></span></th>
+                    <th scope="col"><span class="table-sortable-column-name">Type<i class="fa fa-sort sort-icon ml-2"></i></span></th>
+                    <th scope="col"><span class="table-sortable-column-name">Size<i class="fa fa-sort sort-icon ml-2"></i></span></th>
+                    <th scope="col">Actions</th>
+                </tr>
             </thead>
             <tbody>
             {% csrf_token %}
-            {% for file in files %}
+            {% for file in filter.qs %}
                 <tr class="current-file">
                     <td>
                         <input type="checkbox" class='file-checkbox' value="{{ file.id }}" name="file-check" id="file-check-id">
                     </td>
                     <td>
                         <div class="image-wrapper" data-filepath="{{ file.file.url }}">
-                            {% with image_extensions='.jpg .png .gif .jpeg .heic' doc_extensions='.docx .doc' xls_extensions='.xlsx .xls' ppt_extensions='.pptx .ppt'%}
-                                {% if file.extension in image_extensions %}
-                                    <img class="image-preview" src="{{ file.file.url }}"/>
-                                {% elif file.extension in doc_extensions %}
-                                    <img class="image-preview" src={% static '/image/doc.png' %}/>
-                                {% elif file.extension in xls_extensions %}
-                                    <img class="image-preview" src={% static '/image/xls.png' %}/>
-                                {% elif file.extension in ppt_extensions %}
-                                    <img class="image-preview" src={% static '/image/ppt.png' %}
-                                {% else %}
-                                    <img class="image-preview" src={% static '/image/default-file-icon.gif' %}
-                                {% endif %}
-                            {% endwith %}
+                            {% if file.type == 'Image' %}
+                                <img class="image-preview" src="{{ file.file.url }}"/>
+                            {% elif file.type == 'Document' %}
+                                <img class="image-preview" src={% static '/image/doc.png' %}/>
+                            {% elif file.type == 'Table' %}
+                                <img class="image-preview" src={% static '/image/xls.png' %}/>
+                            {% elif file.type == 'Presentation' %}
+                                <img class="image-preview" src={% static '/image/ppt.png' %}/>
+                            {% else %}
+                                <img class="image-preview" src={% static '/image/default-file-icon.gif' %}
+                            {% endif %}
                         </div>
                     </td>
                     <td><a href="{{ file.file.url }}"><span class="filename">{{ file.title }} {{ file.file.content_type }}</span></a></td>
-                    <td><span style>{{ file.uploaded_at }}</span></td>
+                    <td><span style>{{ file.uploaded_at|naturalday|title }}</span></td>
                     <td><span style>{{ file.type }}</span></td>
                     <td>{{ file.size }}</td>
                     <td>
@@ -109,6 +127,7 @@
                         </div>
                     </td>
                 </tr>
+                {% empty %}
             {% endfor %}
             </tbody>
         </table>
