Refactor file uploading

--- a/templates/storage/upload.html
+++ b/templates/storage/upload.html
@@ -37,7 +37,7 @@
                 <input id="fileupload" type="file" name="file" multiple
                        style="display: none;"
                        data-url="{% url 'upload' %}"
-                       data-form-data='{"csrfmiddlewaretoken": "{{ csrf_token }}", "user": "{{ user.id }}"}'>
+                       data-form-data='{"csrfmiddlewaretoken": "{{ csrf_token }}"}'>
             </div>
         </div>
 
