--- a/templates/subscriptions/subscribe_thank_you.html
+++ b/templates/subscriptions/subscribe_thank_you.html
@@ -12,6 +12,6 @@
 
     <p>You may save your transaction ID for your records: {{ transaction.id }}</p>
 
-    <p class="confirmed-link"><a href="{% url 'upload' %}">Go to your storage</a></p>
+    <p class="confirmed-link"><a href="{% url 'overview' %}">Go to your storage</a></p>
   </main>
 {% endblock %}
