--- a/templates/snippets/header.html
+++ b/templates/snippets/header.html
@@ -1,17 +1,18 @@
 {% load static %}
 
 <nav class="navbar navbar-expand-lg navbar-light header">
-  <a class="navbar-brand header__title"
-     href={% if not user.is_authenticated %}"/subscriptions/subscribe"
-     {% else %}
-         {% url 'upload' %}
-     {% endif %}>
-      Cloud Storage
-  </a>
+    <a class="navbar-brand header__title"
+       href={% if not user.is_authenticated %}"/subscriptions/subscribe"
+       {% else %}
+           {% url 'overview' %}
+       {% endif %}>
+        Cloud Storage
+    </a>
 
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-  </button>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto header__links">
@@ -22,35 +23,40 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">Pricing</a>
                 </li>
-            {% else  %}
+            {% else %}
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'upload' %}">Files</a>
+                    <a class="nav-link" href="{% url 'overview' %}">Overview</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'stats' %}">Stats</a>
                 </li>
             {% endif %}
-{#            <li class="nav-item dropdown header__dropdown">#}
-{#                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">#}
-{#                    Dropdown#}
-{#                </a>#}
-{#                <div class="dropdown-menu" aria-labelledby="navbarDropdown">#}
-{#                    <a class="dropdown-item" href="#">Action</a>#}
-{#                    <a class="dropdown-item" href="#">Another action</a>#}
-{#                    <div class="dropdown-divider"></div>#}
-{#                    <a class="dropdown-item" href="#">Something else here</a>#}
-{#                </div>#}
-{#            </li>#}
+            {#            <li class="nav-item dropdown header__dropdown">#}
+            {#                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">#}
+            {#                    Dropdown#}
+            {#                </a>#}
+            {#                <div class="dropdown-menu" aria-labelledby="navbarDropdown">#}
+            {#                    <a class="dropdown-item" href="#">Action</a>#}
+            {#                    <a class="dropdown-item" href="#">Another action</a>#}
+            {#                    <div class="dropdown-divider"></div>#}
+            {#                    <a class="dropdown-item" href="#">Something else here</a>#}
+            {#                </div>#}
+            {#            </li>#}
         </ul>
 
         {% if not user.is_authenticated %}
             <a class="btn btn-link header__button-login" href="/users/login">Log In</a>
-            <a class="btn btn-primary header__button-signup" href={% url 'dfs_subscribe_list' %}><span>Get Started</span></a>
+            <a class="btn btn-primary header__button-signup"
+               href={% url 'dfs_subscribe_list' %}><span>Get Started</span></a>
         {% else %}
-
-                <a class="btn btn-link header__button-login" href="/users/profile">{{user.username}}</a>
-                <a class="btn btn-link header__button-login" href="/users/logout">Logout</a>
+            <a class="btn btn-link header__button-login" href="/users/profile">{{ user.username }}</a>
+            <a class="btn btn-link header__button-login" href="/users/logout">Logout</a>
         {% endif %}
     </div>
 </nav>
 
 <script src="{% static 'js/jquery/jquery-3.5.1.min.js' %}"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
 <script src="{% static 'js/bootstrap/bootstrap.min.js' %}"></script>
