Cache page storage/overview

--- a/templates/storage/overview.html
+++ b/templates/storage/overview.html
@@ -82,14 +82,10 @@
                     <input class="select-all" type="checkbox"/>
                 </th>
                 <th scope="col">Preview</th>
-                <th scope="col"><span class="table-sortable-column-name">Filename<i
-                        class="fa fa-sort sort-icon ml-2"></i></span></th>
-                <th scope="col"><span class="table-sortable-column-name">Uploaded<i
-                        class="fa fa-sort sort-icon ml-2"></i></span></th>
-                <th scope="col"><span class="table-sortable-column-name">Type<i
-                        class="fa fa-sort sort-icon ml-2"></i></span></th>
-                <th scope="col"><span class="table-sortable-column-name">Size<i
-                        class="fa fa-sort sort-icon ml-2"></i></span></th>
+                <th scope="col"><span class="table-sortable-column-name">Filename</span></th>
+                <th scope="col"><span class="table-sortable-column-name">Uploaded</span></th>
+                <th scope="col"><span class="table-sortable-column-name">Type</span></th>
+                <th scope="col"><span class="table-sortable-column-name">Size</span></th>
                 <th scope="col">Actions</th>
             </tr>
             </thead>
