--- a/templates/storage/stats.html
+++ b/templates/storage/stats.html
@@ -46,27 +46,28 @@
 {% endblock %}
 
 {% block main %}
-<div class="col-8">
-    <div class="">
-        <h1 class="display-4">Storage Stats</h1>
-    </div>
+<div class="stats-wrapper">
+    <h1 class="display-4 profile-title">Storage Stats</h1>
 
-    <div>
-        <canvas id="pie-chart"></canvas>
-        <a href="{% url 'overview' %}">Open storage</a>
-    </div>
+    <canvas id="pie-chart"></canvas>
 
-    <div>
-        <span class="h3">Used size: </span>
-        <span>{{ used_size }}</span>
-    </div>
-    <div>
-        <span class="h3">Files count: </span>
-        <span>{{ files_count }}</span>
-    </div>
-    <div>
-        <span class="h3">Largest file: </span>
-        <span><a href="#">{{ largest_file_title }}</a> ({{ largest_file_size }})</span>
+    <div class="stats-footer">
+
+        <div class="stats-items">
+            <div>
+                <span class="stats-item">Used size: </span>
+                <span>{{ used_size }}</span>
+            </div>
+            <div>
+                <span class="stats-item">Files count: </span>
+                <span>{{ files_count }}</span>
+            </div>
+            <div>
+                <span class="stats-item">Largest file: </span>
+                <span><a href="#">{{ largest_file_title }}</a> ({{ largest_file_size }})</span>
+            </div>
+        </div>
+        <div class="open-storage-link"><a href="{% url 'overview' %}">Open storage</a></div>
     </div>
 </div>
 
