--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,9 +13,7 @@ body {
 }
 
 .header {
-    padding-left: 150px;
-    padding-right: 150px;
-    height: 80px;
+    padding: 15px 150px;
     background-color: #ffffff;
     box-shadow: 0 1px 0 0 rgba(194, 194, 194, 0.24)
 }
@@ -598,4 +596,77 @@ body {
 #dfs-container main a:hover {
     color: #0056b3;
     text-decoration: underline;
+}
+
+.upload-link {
+    color: #007bff;
+}
+
+.upload-link:hover {
+    text-decoration: underline;
+}
+
+/* Stats styles */
+
+.stats-wrapper {
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+.stats-footer {
+    margin-top: 40px;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+}
+.open-storage-link {
+    font-size: 20px;
+}
+
+.stats-item {
+    font-size: 20px;
+    font-weight: 500;
+}
+
+@media(max-width: 767px) {
+    .open-storage-link {
+        margin-top: 20px;
+    }
+}
+
+/* End stats style */
+
+/*@media(max-width: 900px) {*/
+/*    .hidden-column {*/
+/*        display: none;*/
+/*    }*/
+/*}*/
+
+.overview-table {
+    width: 100%;
+    table-layout: fixed;
+}
+.table-body {
+    word-wrap: break-word;
+}
+.select-col {
+    width: 30px;
+}
+
+.preview-column {
+    width: 100px;
+}
+.actions-column {
+    width: 100px;
+}
+.filename-column {
+    width: 300px;
+}
+@media(max-width: 767px) {
+    .hidden-column {
+        display: none;
+    }
+}
+
+.form-group ul {
+    margin-left: 15px;
 }
