--- a/templates/storage/overview.html
+++ b/templates/storage/overview.html
@@ -24,7 +24,7 @@
     <script src="{% static 'js/jquery/table-actions/table-actions.js' %}"></script>
 {% endblock %}
 
-{% block main %}
+{% block overview-table %}
     <div>
         <div class="drag-and-drop well text-muted text-center">
             <span class="glyphicon glyphicon-arrow-down" style="font-size: 4rem;"></span>
@@ -33,7 +33,7 @@
             <div class="file-upload" style="display: inline-block">
                 <span>Or upload by</span>
                 <a class="js-upload-files js-upload-files-link">
-                    <span class="glyphicon glyphicon-cloud-upload">link</span>
+                    <span class="glyphicon glyphicon-cloud-upload upload-link">link</span>
                 </a>
                 <input id="fileupload" type="file" name="file" multiple
                        style="display: none;"
@@ -75,30 +75,30 @@
             </form>
         </div>
 
-        <table id="files-list" class="table table-striped">
+        <table id="files-list" class="table table-striped overview-table">
             <thead class="thead-light">
             <tr>
-                <th scope="col" class="">
+                <th scope="col" class="select-col">
                     <input class="select-all" type="checkbox"/>
                 </th>
-                <th scope="col">Preview</th>
-                <th scope="col"><span class="table-sortable-column-name">Filename</span></th>
+                <th scope="col" class="hidden-column preview-column">Preview</th>
+                <th scope="col" class="filename-column"><span class="table-sortable-column-name">Filename</span></th>
                 <th scope="col"><span class="table-sortable-column-name">Uploaded</span></th>
-                <th scope="col"><span class="table-sortable-column-name">Type</span></th>
+                <th scope="col" class="hidden-column"><span class="table-sortable-column-name">Type</span></th>
                 <th scope="col"><span class="table-sortable-column-name">Size</span></th>
-                <th scope="col">Actions</th>
+                <th scope="col" class="actions-column">Actions</th>
             </tr>
             </thead>
 
-            <tbody>
+            <tbody class="table-body">
             {% csrf_token %}
             {% for file in files %}
                 <tr class="current-file">
-                    <td>
+                    <td class="select-col">
                         <input type="checkbox" class='file-checkbox' value="{{ file.id }}" name="file-check"
                                id="file-check-id">
                     </td>
-                    <td>
+                    <td class="hidden-column preview-column">
                         <div class="image-wrapper" data-filepath="{{ file.file.url }}">
                             {% if file.type == 'Image' %}
                                 <img class="image-preview" src="{{ file.file.url }}"/>
@@ -117,12 +117,12 @@
                             {% endif %}
                             </div>
                     </td>
-                    <td><a href="{{ file.file.url }}"><span
+                    <td class="filename-column"><a href="{{ file.file.url }}"><span
                             class="filename">{{ file.title }} {{ file.file.content_type }}</span></a></td>
                     <td><span style>{{ file.uploaded_at|naturalday|title }}</span></td>
-                    <td><span style>{{ file.type }}</span></td>
+                    <td class="hidden-column type-column"><span style>{{ file.type }}</span></td>
                     <td>{{ file.size }}</td>
-                    <td>
+                    <td class="actions-column">
                         <div>
                             <div class="i-delete" type="submit" data-file-id="{{ file.id }}">
                                 <i class="fa fa-trash-alt action-icon text-danger"></i>
