--- a/templates/storage/stats.html
+++ b/templates/storage/stats.html
@@ -47,7 +47,7 @@
 
 {% block main %}
 <div class="stats-wrapper">
-    <h1 class="display-4 profile-title">Storage Stats</h1>
+    <h2>Storage Stats</h2>
 
     <canvas id="pie-chart"></canvas>
 
