--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
                     {% endblock %}
                 </div>
                 <div class="col-12">
-                    {% block overview-table %}
+                    {% block col-12 %}
                     {% endblock %}
                 </div>
             </div>
