--- a/templates/snippets/header.html
+++ b/templates/snippets/header.html
@@ -9,12 +9,12 @@
         Cloud Storage
     </a>
 
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    <button class="navbar-toggler navbar-toggle-focus" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div class="collapse navbar-collapse navbar-display" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto header__links">
             {% if not user.is_authenticated %}
                 <li class="nav-item">
@@ -44,14 +44,16 @@
             {#            </li>#}
         </ul>
 
-        {% if not user.is_authenticated %}
-            <a class="btn btn-link header__button-login" href="/users/login">Log In</a>
-            <a class="btn btn-primary header__button-signup"
-               href={% url 'dfs_subscribe_list' %}><span>Get Started</span></a>
-        {% else %}
-            <a class="btn-link header__button-login" href="/users/profile">{{ user.username }}</a>
-            <a class="btn btn-link header__button-login" href="/users/logout">Logout</a>
-        {% endif %}
+        <div class="header-buttons">
+            {% if not user.is_authenticated %}
+                <a class="btn btn-link header-button header__button-login" href="/users/login">Log In</a>
+                <a class="btn btn-primary header-button header__button-signup"
+                   href={% url 'dfs_subscribe_list' %}><span>Get Started</span></a>
+            {% else %}
+                <a class="btn btn-link header-button header__button-login" href="/users/profile">{{ user.username }}</a>
+                <a class="btn btn-link header-button header__button-login" href="/users/logout">Logout</a>
+            {% endif %}
+        </div>
     </div>
 </nav>
 
